sonar-server/src/main/webapp/stylesheets/layout.css
@media print {
  /* ------------------- PRINT ------------------- */
  html, body {
    font-size: 8pt;
  }

  a, a:link, a:visited {
    text-decoration: none;
    border-bottom: 0;
  }

  .noprint {
    display: none !important;
  }

  .print {
    display: inline;
    position: static;
    left: 0;
  }

  #hd, #sidebar, #crumbs {
    display: none;
  }

  .with_sidebar, .wo_sidebar {
    padding: 0 !important;
    margin: 0;
  }

  #content {
    margin-left: 0 !important;
  }
}

@media screen {
  .print {
    display: none;
  }
}

body, a {
  color: #444;
}

/* LAYOUT */
#container {
  height: auto !important;
  min-width: 940px;
  min-height: 500px;
}

#hd {
  color: #FFF;
  background: #262626;
  padding: 0 10px 0 21px;
  height: 30px;
  line-height: 30px;
  font-size: 93%;
  margin: 0;
  position: relative;
}

#hd a {
  color: #FFF;
  text-decoration: none;
}

#hd a:focus, #hd a:hover {
  text-decoration: underline;
}

#nav-left {
  float: left;
  vertical-align: middle;
}

#nav {
  float: right;
  padding: 0 0 0 20px;
  vertical-align: middle;
}

#nav-left img, #nav img {
  vertical-align: text-bottom;
}

#nav-left > ul> li {
  float: left;
  padding: 0 20px 0 0;
}

#nav > ul> li {
  float: right;
  padding: 0 0 0 10px;
}

#searchResourcesResults {
  position: absolute;
  float: right;
  width: 600px;
  top: 30px;
  right: 0;
}

#crumbs {
  color: #444;
  background: #EFEFEF;
  height: 26px;
  line-height: 26px;
  font-size: 93%;
  margin: 0;
  padding: 0 10px 0 21px;
  border-bottom: 1px solid #CCC;
}

#crumbs img {
  vertical-align: text-bottom;
}

#bc li {
  float: left;
  background: #EFEFEF url("../images/bc-gray.png") no-repeat right;
  border-bottom: 1px solid #CCC;
  padding: 0 20px 0 0;
  margin: 0 10px 0 0;
}

#bc li img {
  margin-right: -5px;
}

#bc li a {
  text-decoration: none;
}

#bc li a:hover, #bc li a:focus {
  text-decoration: underline;
}

#crumbs-ops {
  float: right;
  padding: 0 5px 0 0;
}

#crumbs-ops li {
  float: left;
  padding: 0 0 0 10px;
}

#crumbs-ops li a {
  text-decoration: none;
}

#crumbs-ops li a:hover, #crumbs-ops li a:focus {
  text-decoration: underline;
}

#content {
  padding: 10px;
}

#hd .dropdown-menu a {
  color: #000;
}

#project-settings-menu {
  float: right;
  right: 20px;
}

#nonav {
  text-align: left;
  margin: 50px 180px 0;
}

#body {
  position: relative;
}

#footer {
  margin: 10px;
  clear: both;
}

.with_sidebar {
  margin: 0 0 0 160px;
}

.wo_sidebar {
  margin: 0 8px;
}

#sidebar {
  width: 150px;
  position: absolute;
  margin: 0 0 0 10px;
  top: 0;
  left: 0;
}

ul.sidebar {
  text-align: left;
  border-top: none;
  padding: 10px 0;
}

ul.sidebar li {
  list-style-type: none;
  line-height: 1.1em;
  padding: 3px 10px;
}

ul.sidebar li a {
  text-decoration: none;
}

ul.sidebar li a:hover {
  text-decoration: underline;
}

ul.sidebar li.active {
  background-color: #4b9fd5;
}

ul.sidebar li.active a, ul.sidebar li.active a:hover {
  color: #FFF;
}

li.sidebar-title {
  text-transform: uppercase;
  font-size: 93%;
  font-weight: bold;
}

ul.sidebar li.spacer {
  border: 0 none;
  height: 10px;
  margin: 0;
  padding: 0;
}
ul.sidebar select, ul.sidebar input {
  font-size: 93%;
}


#logo {
  text-align: center;
  padding: 8px 0 0 0;
}

#logo a {
  text-decoration: none;
  border-bottom-width: 0;
}

#logo img {
  display: block;
}

.nolayout {
  padding: 10px;
}

.page-split-left {
  min-width: 200px;
  max-width: 200px;
  width: 200px;
  margin: 0;
  display: table-cell;
  vertical-align: top;
  border-top: none;
  border-left: none;
}

.page-split-right {
  position: relative;
  display: table-cell;
  margin: 0;
  vertical-align: top;
  width: 100%;
  padding: 0;
}

.gray-sidebar {
  background-color: #EFEFEF;
  border: 1px solid #CCC;
  color: #666;
  border-top: none;
}

.blue-sidebar {
  background-color: #CAE3F2;
  color: #262626;
  border: 2px solid #4b9fd5;
  border-top: none;
}

